[package]
name = "exrpc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
emf-rs = { path = "../../bindings/rust/emf-rs" }
log = "0.4.22"
discord-rpc-client = "^0.4"
